# codecrafters-shell-rust

./: Cargo.toml  README.md  commit.sh  your_program.sh
src/: args.rs  helper.rs  history.rs  main.rs  output.rs  paths.rs  raw_terminal.rs  redirects.rs
src/commands/: append.rs  cd.rs  echo.rs  exit.rs  history.rs  mod.rs  noop.rs  pwd.rs  redirect.rs  run.rs  type.rs
