[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
ctrlc = "3.5.1"
is_executable = "1.0.5"
libc = "0.2.177"
thiserror = "1.0.38"                             # error handling
