[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
crossterm = "0.29.0"
is_executable = "1.0.5"
once_cell = "1.21.3"
thiserror = "1.0.38"                             # error handling
